<resources>
    <string name="app_name">CarRent</string>

    <!-- common use -->
    <string name="username">Username</string>
    <string name="hintUsername">Enter Your Username</string>
    <string name="password">Password</string>
    <string name="hintPassword">Enter Your Password</string>
    <string name="email">Email</string>
    <string name="hintEmail">Enter Your Email</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="hintConfirmPassword">Enter Your Confirm Password</string>
    <string name="nik">NIK</string>
    <string name="hintNik">Enter Your NIK</string>
    <string name="namaLengkap">Full Name</string>
    <string name="hintNamaLengkap">Enter Your Full Name</string>
    <string name="tanggalLahir">Date of Birth</string>
    <string name="hintTanggalLahir">dd/mm/yyyy</string>
    <string name="jenisKelamin">Gender</string>
    <string name="pria">Male</string>
    <string name="wanita">Female</string>
    <string name="alamat">Address</string>
    <string name="hintAlamat">Enter Your Address</string>
    <string name="noHp">Phone</string>
    <string name="hintNoHp">Enter Your Phone Number</string>

    <!-- NavBar -->
    <string name="dashboard">Dashboard</string>
    <string name="car">Car</string>
    <string name="worker">Worker</string>

    <!-- login -->
    <string name="login_welcome">Welcome Admin!</string>
    <string name="login_judul">LOGIN</string>

    <!-- dashboard -->
    <string name="dashboard_judul1">Car List</string>
    <string name="dashboard_judul2">Worker List</string>

    <!-- car -->

    <!-- worker -->
    <string name="worker_fullName">Full Name</string>
    <string name="worker_hintFullName">Enter Your Full Name</string>
    <string name="worker_position">Position</string>
    <string name="worker_hintPosition">Enter Your Position</string>
    <string name="worker_phone">Phone</string>
    <string name="worker_hintPhone">Enter Your Phone Number</string>
    <string name="worker_address">Address</string>
    <string name="worker_hintAddress">Enter Your Address</string>

    <!-- button-->
    <string name="btn_masuk">Login</string>
    <string name="btn_pilih">Choose</string>
    <string name="btn_keluar">Logout</string>
    <string name="btn_tambah">Add</string>
    <string name="btn_ubah">Edit</string>
    <string name="btn_hapus">Delete</string>
</resources>