<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputWorkerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/FullDataSection"
        android:layout_width="350dp"
        android:layout_height="465dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civWorkerPhoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/user1"
            app:civ_border_color="#000000"
            app:civ_border_overlay="true"
            app:civ_border_width="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingClass" />

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/worker_fullName"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/civWorkerPhoto" />

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_edit_text"
            android:inputType="text"
            android:textSize="11dp"
            android:autofillHints="NIK"
            android:hint="@string/worker_hintFullName"
            app:layout_constraintTop_toBottomOf="@id/tvFullName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/tvPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/worker_position"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etFullName" />

        <EditText
            android:id="@+id/etPosition"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/worker_hintPosition"
            android:inputType="text"
            android:textSize="11dp"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPosition" />

        <TextView
            android:id="@+id/tvTelephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/noHp"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPosition" />

        <EditText
            android:id="@+id/etTelephone"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_edit_text"
            android:inputType="phone"
            android:textSize="11dp"
            android:hint="@string/hintNoHp"
            app:layout_constraintTop_toBottomOf="@id/tvTelephone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/jenisKelamin"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etTelephone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/RadioGroupSection"
            android:layout_width="288dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toBottomOf="@id/tvGender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/Male"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:checked="true"
                    android:text="@string/pria"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/Female"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:text="@string/wanita"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/worker_address"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/RadioGroupSection" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_edit_text"
            android:inputType="text"
            android:textSize="11dp"
            android:hint="@string/hintAlamat"
            app:layout_constraintTop_toBottomOf="@id/tvAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_tambah"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:backgroundTint="#FBC99C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FullDataSection" />

</androidx.constraintlayout.widget.ConstraintLayout>