<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FillUpDataActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/ivLogoFullData"
            android:layout_width="300px"
            android:layout_height="300px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tvFullData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="teks"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogoFullData" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/FullDataSection"
            android:layout_width="350dp"
            android:layout_height="520dp"
            android:background="@drawable/rounded_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFullData">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civUserPhoto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/user"
                app:civ_border_color="#000000"
                app:civ_border_overlay="true"
                app:civ_border_width="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingClass" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civPhotoInsert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_circle_24"
                android:src="@drawable/ic_baseline_create_24"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="@id/civUserPhoto"
                app:layout_constraintBottom_toBottomOf="@id/civUserPhoto"/>

            <TextView
                android:id="@+id/tvNIK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/nik"
                android:textColor="#000000"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/civUserPhoto" />

            <EditText
                android:id="@+id/etNIK"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_edit_text"
                android:inputType="number"
                android:maxLength="16"
                android:textSize="11dp"
                android:autofillHints="NIK"
                android:hint="@string/hintNik"
                app:layout_constraintTop_toBottomOf="@id/tvNIK"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/namaLengkap"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etNIK" />

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_edit_text"
                android:inputType="text"
                android:textSize="11dp"
                android:hint="@string/hintNamaLengkap"
                app:layout_constraintTop_toBottomOf="@id/tvFullName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/tvDateOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/tanggalLahir"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etFullName" />

            <EditText
                android:id="@+id/etDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="Select Date"
                android:textSize="11dp"
                app:layout_constraintTop_toBottomOf="@id/tvDateOfBirth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/jenisKelamin"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etDateOfBirth" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/RadioGroupSection"
                android:layout_width="288dp"
                android:layout_height="32dp"
                app:layout_constraintTop_toBottomOf="@id/tvGender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/Male"
                        android:layout_width="144dp"
                        android:layout_height="wrap_content"
                        android:buttonTint="#000000"
                        android:checked="true"
                        android:text="@string/pria"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/Female"
                        android:layout_width="144dp"
                        android:layout_height="wrap_content"
                        android:buttonTint="#000000"
                        android:text="@string/wanita"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/alamat"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/RadioGroupSection" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_edit_text"
                android:inputType="text"
                android:textSize="11dp"
                android:hint="@string/hintAlamat"
                app:layout_constraintTop_toBottomOf="@id/tvAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/tvTelephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/noHp"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAddress" />

            <EditText
                android:id="@+id/etTelephone"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_edit_text"
                android:inputType="phone"
                android:textSize="11dp"
                android:hint="@string/hintNoHp"
                app:layout_constraintTop_toBottomOf="@id/tvTelephone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="tes"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:backgroundTint="#FBC99C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FullDataSection" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>